--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap");
 @import "tailwindcss";
 
 @theme {
-  --font-display: "Satoshi", "sans-serif";
+  --font-display: "Rubik", "sans-serif";
   --breakpoint-3xl: 1920px;
   --color-avocado-100: oklch(0.99 0 0);
   --color-avocado-200: oklch(0.98 0.04 113.22);
@@ -11,5 +12,36 @@
   --color-avocado-600: oklch(0.53 0.12 118.34);
   --ease-fluid: cubic-bezier(0.3, 0, 0, 1);
   --ease-snappy: cubic-bezier(0.2, 0, 0, 1);
+  --color-section-hero: #fdf2e9;
   /* ... */
+}
+
+@layer utilities {
+  .bg-section-hero {
+    background-color: var(--color-section-hero);
+  }
+
+  .text-order-fee-title {
+    color: #fcafa7;
+  }
+
+  .bg-title-section-menu {
+    background-color: #fcafa7;
+  }
+
+  .bg-menu-title {
+    background-color: #fcc1b1;
+  }
+
+  .bg-menu-item {
+    background-color: #fdd9c9;
+  }
+
+  .bg-menu {
+    background-color: #feead4;
+  }
+
+  .text-avocado-500 {
+    color: var(--color-avocado-500);
+  }
 }
